platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_86.platter
piece of a = piece
start(){}